--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@types/react-image-gallery": "^1.0.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-image-gallery": "^1.0.8"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
