--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@types/react-image-gallery": "^1.0.0",
+    "axios": "^0.20.0",
+    "framer-motion": "^2.9.0",
     "isomorphic-unfetch": "^3.1.0",
-    "next": "9.5.3",
+    "next": "9.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-image-gallery": "^1.0.8"
+    "react-image-gallery": "^1.0.8",
+    "swr": "^0.3.5"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
