--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "mock-server": "json-server --watch ./db.json -p 4001"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.50",
+    "json-server": "^0.16.2",
     "typescript": "^4.0.3"
   }
 }
